--- a/LoginForm/LoginForm/bin/LoginForm.dll.config
+++ b/LoginForm/LoginForm/bin/LoginForm.dll.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=db.dev.cogitate.us\SQLDEV2019,1440;Initial Catalog=Developer_Demo;Persist Security Info=True;User ID=dev_user;Password=25#Hammer" providerName="system.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=db.dev.cogitate.us\SQLDEV2019,1440;Initial Catalog=Developer_Demo;Persist Security Info=True;User ID=mmujawar;Password=29#Hammer" providerName="system.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
